objects/WorkBadgeMission__c/WorkBadgeMission__c.object-meta.xml
<CustomObject>
    <description>WorkBadgeMission</description>
    <label>WorkBadgeMission</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WorkBadgeMissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>