objects/WorkBadgeMission__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Action</description>
    <label>Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add a Post</fullName>
            </value>
            <value>
                <fullName>Add a Comment</fullName>
            </value>
            <value>
                <fullName>Ask a question</fullName>
            </value>
            <value>
                <fullName>Answer a question</fullName>
            </value>
            <value>
                <fullName>Best Answer</fullName>
            </value>
            <value>
                <fullName>Upload a profile image</fullName>
            </value>
            <value>
                <fullName>Create an Idea</fullName>
            </value>
            <value>
                <fullName>Your answer is marked as best</fullName>
                <isActive>false</isActive>
                <label>Your answer is marked as best</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>