objects/WorkBadgeMission__c/fields/Badge_Name__c.field-meta.xml
<CustomField>
    <fullName>Badge_Name__c</fullName>
    <description>Badge Name</description>
    <label>Badge Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>