objects/WorkBadgeMission__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Message</description>
    <label>Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>