objects/WorkBadgeMission__c/fields/SourceId__c.field-meta.xml
<CustomField>
    <fullName>SourceId__c</fullName>
    <description>WorkBadgeId, used by automation</description>
    <label>SourceId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>