objects/WorkBadgeMission__c/validationRules/Create_an_Idea_x1.validationRule-meta.xml
<ValidationRule>
    <fullName>Create_an_Idea_x1</fullName>
    <active>true</active>
    <description>Create an Idea can only be x1</description>
    <errorConditionFormula>AND(Text(Action__c) = &apos;Create an Idea&apos;,Threshold__c != 1)</errorConditionFormula>
    <errorDisplayField>Threshold__c</errorDisplayField>
    <errorMessage>Create an Idea can only be x1</errorMessage>
</ValidationRule>