objects/WorkBadgeMission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Badge_Name__c</columns>
    <columns>Action__c</columns>
    <columns>IsActive__c</columns>
    <columns>Message__c</columns>
    <columns>Threshold__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>